--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -94,7 +94,7 @@
                 <article class="footer-section">
                     <h3 class="footer-section-title">Contactanos</h3>
                     <ul class="footer-section-table">
-                        <li>Wpp: 1139-4635</li>
+                        <li>Wpp: 1139-4635.</li>
                         <li>Tel 5486-7864</li>
                         <li>Mercado-golosinas@gmail.com</li>
                         <li>Av. Benavidez 2758,Benavidez</li>
