--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bienvenido a Caramelitos, tu tienda en línea para la venta al por mayor y menor de golosinas y caramelos. Descubre nuestra amplia variedad de dulces, desde chocolates y gomitas hasta caramelos tradicionales. ¡Endulza tu vida con Caramelitos!">
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,11 +13,13 @@
     <script src="https://kit.fontawesome.com/3415d360fb.js" crossorigin="anonymous"></script>
     <!-- link css -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- link scss -->
+    <link rel="stylesheet" href="./css/main.css">
     <!-- link Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <title>Mercado de Golosinas</title>
+    <title>Caramelitos | Lo Mas Destacado</title>
 </head>
 
 <body>
@@ -24,8 +27,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary menu">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./Index.html">
-                    <img src="./img/logo-title.png" alt="Logo">
+                <a class="navbar-brand" href="./index.html">
+                    <img class="logo" src="./img/logo-title.png" alt="Logo" title="Logo">
                 </a>
                 <button class="navbar-toggler menu-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -35,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="./Index.html">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/quienes-somos.html">Quienes somos</a>
@@ -48,7 +51,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./pages/productos.html">Caramelos</a></li>
                                 <li><a class="dropdown-item" href="./pages/productos.html">Chocolates</a></li>
-                                <li>
+                                <li class="drop-3">
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item" href="./pages/productos.html">Mas Productos</a></li>
@@ -61,7 +64,7 @@
                             <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
+                    <form class="d-flex buscador" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success button-search" type="submit">Search</button>
                     </form>
@@ -72,13 +75,13 @@
     <!-- fin header -->
     <div class="encabezado-img"></div>
 
-    <main>
+    <main class="main-index">
         <section>
             <div class="container">
                 <div class="row gy-3">
                     <div class="col-md-4">
                         <div class="card .card-img">
-                            <img src="./img/caja.png" class="card-img-top card-img text-center" alt="caja">
+                            <img src="./img/caja.png" class="card-img-top card-img text-center" alt="caja" title="caja">
                             <div class="card-body">
                                 <h5 class="card-title">Las mejores marcas!</h5>
                                 <p class="card-text">Cuidamos tu bolsillo , tenemos los mejores precios!</p>
@@ -87,7 +90,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card .card-img">
-                            <img src="./img/tarjeta-de-credito.png" class="card-img-top card-img" alt="tarjeta">
+                            <img src="./img/tarjeta-de-credito.png" class="card-img-top card-img" alt="tarjeta" title="tarjetas">
                             <div class="card-body">
                                 <h5 class="card-title">Contamos con todos los medios de pago!</h5>
                                 <p class="card-text">podes abonar con cualquier metodo de pago
@@ -97,7 +100,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card .card-img">
-                            <img src="./img/llamada-telefonica.png" class="card-img-top card-img" alt="llamada">
+                            <img src="./img/llamada-telefonica.png" class="card-img-top card-img" alt="llamada" title="llamada">
                             <div class="card-body">
                                 <h5 class="card-title">Gran atencion</h5>
                                 <p class="card-text">Estamos para servirte , atendemos todas tus consultas</p>
@@ -114,11 +117,10 @@
                     <div class="col-md-4">
                         <div class="card .card-img">
                             <img src="./img/Golosina-01.png" class="card-img-top card-img text-center"
-                                alt="Combo Golosinas">
+                                alt="Combo Golosinas" title="box golosinas">
                             <div class="card-body">
                                 <h5 class="card-title"> Box Golosinas Argentinas</h5>
-                                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi
-                                    quas perferendis dolore praesentium tempora voluptatem.</p>
+                                <p class="card-text">es ideal para regalar, compartir en reuniones, o simplemente disfrutar en cualquier momento. Cada caja es una experiencia dulce que te transportará a los sabores y recuerdos más queridos de Argentina. ¡Déjate sorprender por cada bocado!</p>
                                 <h2>$3500</h2>
                                 <a href="#" class="btn btn-primary">comprar</a>
                                 <a href="#" class="btn btn-primary">ver mas</a>
@@ -127,11 +129,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card .card-img">
-                            <img src="./img/ramo-chocolates.png" class="card-img-top card-img" alt="ramo chocolates">
+                            <img src="./img/ramo-chocolates.png" class="card-img-top card-img" alt="ramo chocolates" title="ramos">
                             <div class="card-body">
                                 <h5 class="card-title">Ramo de chocolates</h5>
-                                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi
-                                    quas perferendis dolore praesentium tempora voluptatem.</p>
+                                <p class="card-text">es el regalo perfecto para cualquier amante del chocolate, combinando el placer visual con la delicia del sabor. ¡Haz que cualquier día sea especial con esta dulce sorpresa!</p>
                                 <h2>$4000</h2>
                                 <a href="#" class="btn btn-primary">comprar</a>
                                 <a href="#" class="btn btn-primary">ver mas</a>
@@ -140,11 +141,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card .card-img">
-                            <img src="./img/Gomitas.jpg" class="card-img-top card-img" alt="gomitas">
+                            <img src="./img/Gomitas.jpg" class="card-img-top card-img" alt="gomitas" title="gomitas">
                             <div class="card-body">
                                 <h5 class="card-title">Gomitas</h5>
-                                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi
-                                    quas perferendis dolore praesentium tempora voluptatem.</p>
+                                <p class="card-text">son perfectas para fiestas, como un delicioso refrigerio, o para llevar una pequeña dosis de alegría a tu día. ¡Anímate a probarlas y déjate llevar por su sabor y diversión!</p>
                                 <h2>$5000</h2>
                                 <a href="#" class="btn btn-primary">comprar</a>
                                 <a href="#" class="btn btn-primary">ver mas</a>
@@ -162,7 +162,7 @@
                 <article class="footer-section">
                     <h3 class="footer-section-title">Enlaces</h3>
                     <ul class="footer-section-table">
-                        <li class="footer-section-links"><a href="./Index.html">Inicio</a></li>
+                        <li class="footer-section-links"><a href="./index.html">Inicio</a></li>
                         <li class="footer-section-links"><a href="./pages/quienes-somos.html" class=" footer-section-link">Quienes somos</a></li>
                         <li class="footer-section-links"><a href="./pages/productos.html" class=" footer-section-link">Productos</a></li>
                         <li class="footer-section-links"><a href="./pages/galeria.html" class=" footer-section-link">Galeria</a></li>
@@ -178,17 +178,17 @@
                         <li>Av. Benavidez 2758,Benavidez</li>
                     </ul>
                 </article>
-                <article class="footer-section">
-                    <h3 class="footer-section-title">Siguenos</h3>
+                <article class="footer-section ft-social">
+                    <h3 class="footer-section-title follow">Siguenos</h3>
                     <div class="social-container">
                         <a href="#" class="social-icon">
-                            <img src="img/facebook.svg" alt="icono-facebook">
+                            <img  class="img-social" src="img/facebook.svg" alt="icono-facebook" title="fb-icono">
                         </a>
                         <a href="https://www.instagram.com/caramelitos_mayorista/" class="social-icon" target="_blank">
-                            <img src="img/instagram.svg" alt="icono-instagram">
+                            <img class="img-social" src="img/instagram.svg" alt="icono-instagram" title="insta-icono">
                         </a>
                         <a href="#" class="social-icon">
-                            <img src="img/twitter-x.svg" alt="icono-twitter-x">
+                            <img class="img-social" src="img/twitter-x.svg" alt="icono-twitter-x" title="tw-icono">
                         </a>
                     </div>
                     <div class="suscribe-container">
@@ -196,7 +196,7 @@
                         <form action="" class="suscribe-container-form">
                             <input type="email" class="suscribe-container-input input"
                                 placeholder="Ingresa tu correo electronico">
-                            <a type="Enviar" class="button button-primary suscribe-container-button">Suscribirme</a>
+                            <a  href="#" type="Enviar" class="button button-primary suscribe-container-button">Suscribirme</a>
                         </form>
                     </div>
                 </article>
