--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Explora la galería de Caramelitos y descubre nuestra amplia variedad de golosinas y caramelos. Desde chocolates y gomitas hasta caramelos tradicionales, disfruta de las imágenes de nuestros deliciosos productos.">
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,18 +17,21 @@
     <script src="https://kit.fontawesome.com/3415d360fb.js" crossorigin="anonymous"></script>
     <!-- link css -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- link scss -->
+    <link rel="stylesheet" href="./css/main.css">
     <!-- link Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <title>Mercado de Golosinas</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
+    <title>Galeria | Caramelitos</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary menu">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../Index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../img/logo-title.png" alt="Logo">
                 </a>
                 <button class="navbar-toggler menu-button" type="button" data-bs-toggle="collapse"
@@ -37,7 +42,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="../Index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
@@ -72,13 +77,14 @@
         </nav>
     </header>
     <!-- comiezo main -->
-    <main>
+    <main class="main-galeria">
         <section class="carrusel-section">
             <article class="carrusel-section-cards container">
                 <div class="section-card show">
                     <div class="section-card-content">
                         <h1 class="section-card-title">Bienvenido a nuestra tienda!</h1>
-                        <p class="section-card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit, Libero asperiores.</p>
+                        <p class="section-card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit, Libero
+                            asperiores.</p>
                         <div class="section-card-buttons">
                             <a href="./productos.html" class="button button-primary">Ver Catalogo</a>
                             <a href="./contacto.html" class="button button-secondary">Contactanos</a>
@@ -93,7 +99,8 @@
                 <div class="section-card">
                     <div class="section-card-content">
                         <h1 class="section-card-title">Tu mayorista de confianza!</h1>
-                        <p class="section-card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit, Libero asperiores.</p>
+                        <p class="section-card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit, Libero
+                            asperiores.</p>
                         <div class="section-card-buttons">
                             <a href="./productos.html" class="button button-primary">Ver Catalogo</a>
                             <a href="./contacto.html" class="button button-secondary">Contactanos</a>
@@ -108,7 +115,8 @@
                 <div class="section-card">
                     <div class="section-card-content">
                         <h1 class="section-card-title">Tenemos todo lo que buscas y mas!</h1>
-                        <p class="section-card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit, Libero asperiores.</p>
+                        <p class="section-card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit, Libero
+                            asperiores.</p>
                         <div class="section-card-buttons">
                             <a href="./productos.html" class="button button-primary">Ver Catalogo</a>
                             <a href="./contacto.html" class="button button-secondary">Contactanos</a>
@@ -120,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-    <!--Botones carrusel  -->
+                <!--Botones carrusel  -->
                 <div class="carrusel-control">
                     <a href="#" class="carrusel-control prev"><i class="bi bi-arrow-left"></i></a>
                     <a href="#" class="carrusel-control next"><i class="bi bi-arrow-right"></i></a>
@@ -136,11 +144,15 @@
                 <article class="footer-section">
                     <h3 class="footer-section-title">Enlaces</h3>
                     <ul class="footer-section-table">
-                        <li class="footer-section-links"><a href="../Index.html">Inicio</a></li>
-                        <li class="footer-section-links"><a href="./quienes-somos.html" class=" footer-section-link">Quienes somos</a></li>
-                        <li class="footer-section-links"><a href="./productos.html" class=" footer-section-link">Productos</a></li>
-                        <li class="footer-section-links"><a href="./galeria.html" class=" footer-section-link">Galeria</a></li>
-                        <li class="footer-section-links"><a href="./contacto.html" class=" footer-section-link">Contacto</a></li>
+                        <li class="footer-section-links"><a href="../index.html">Inicio</a></li>
+                        <li class="footer-section-links"><a href="./quienes-somos.html"
+                                class=" footer-section-link">Quienes somos</a></li>
+                        <li class="footer-section-links"><a href="./productos.html"
+                                class=" footer-section-link">Productos</a></li>
+                        <li class="footer-section-links"><a href="./galeria.html"
+                                class=" footer-section-link">Galeria</a></li>
+                        <li class="footer-section-links"><a href="./contacto.html"
+                                class=" footer-section-link">Contacto</a></li>
                     </ul>
                 </article>
                 <article class="footer-section">
@@ -155,7 +167,8 @@
                 <article class="footer-section">
                     <h3 class="footer-section-title">Siguenos</h3>
                     <div class="social-container">
-                        <a href="https://www.facebook.com/p/Mercado-de-golosinas-Caramelitos-100064363705000/" class="social-icon" target="_blank">
+                        <a href="https://www.facebook.com/p/Mercado-de-golosinas-Caramelitos-100064363705000/"
+                            class="social-icon" target="_blank">
                             <img src="../img/facebook.svg" alt="icono-facebook">
                         </a>
                         <a href="https://www.instagram.com/caramelitos_mayorista/" class="social-icon" target="_blank">
@@ -170,7 +183,8 @@
                         <form action="" class="suscribe-container-form">
                             <input type="email" class="suscribe-container-input input"
                                 placeholder="Ingresa tu correo electronico">
-                            <a type="Enviar" class="button button-primary suscribe-container-button">Suscribirme</a>
+                            <a href="#" type="Enviar"
+                                class="button button-primary suscribe-container-button">Suscribirme</a>
                         </form>
                     </div>
                 </article>
@@ -188,7 +202,7 @@
     <!-- scrip bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+        </script>
 
 </body>
 
