--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Descubre la amplia variedad de productos en Caramelitos. Ofrecemos golosinas y caramelos de alta calidad para venta al por mayor y menor. Encuentra chocolates, gomitas, caramelos tradicionales y más. ¡Explora nuestros deliciosos productos hoy mismo!">
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,18 +14,21 @@
     <script src="https://kit.fontawesome.com/3415d360fb.js" crossorigin="anonymous"></script>
     <!-- link css -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- link scss -->
+    <link rel="stylesheet" href="./css/main.css">
     <!-- link Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <title>Mercado de Golosinas</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
+    <title>Productos | Caramelitos</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary menu">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../Index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../img/logo-title.png" alt="Logo">
                 </a>
                 <button class="navbar-toggler menu-button" type="button" data-bs-toggle="collapse"
@@ -34,7 +39,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="../Index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
@@ -71,7 +76,7 @@
     <!-- fin header -->
     <div class="encabezado-img"></div>
     <!-- comiezo main -->
-    <main>
+    <main class="main-productos">
         <h1>Chocolates</h1>
         <section>
             <div class="container">
@@ -175,11 +180,15 @@
                 <article class="footer-section">
                     <h3 class="footer-section-title">Enlaces</h3>
                     <ul class="footer-section-table">
-                        <li class="footer-section-links"><a href="../Index.html">Inicio</a></li>
-                        <li class="footer-section-links"><a href="./quienes-somos.html" class=" footer-section-link">Quienes somos</a></li>
-                        <li class="footer-section-links"><a href="./productos.html" class=" footer-section-link">Productos</a></li>
-                        <li class="footer-section-links"><a href="./galeria.html" class=" footer-section-link">Galeria</a></li>
-                        <li class="footer-section-links"><a href="./contacto.html" class=" footer-section-link">Contacto</a></li>
+                        <li class="footer-section-links"><a href="../index.html">Inicio</a></li>
+                        <li class="footer-section-links"><a href="./quienes-somos.html"
+                                class=" footer-section-link">Quienes somos</a></li>
+                        <li class="footer-section-links"><a href="./productos.html"
+                                class=" footer-section-link">Productos</a></li>
+                        <li class="footer-section-links"><a href="./galeria.html"
+                                class=" footer-section-link">Galeria</a></li>
+                        <li class="footer-section-links"><a href="./contacto.html"
+                                class=" footer-section-link">Contacto</a></li>
                     </ul>
                 </article>
                 <article class="footer-section">
@@ -209,7 +218,8 @@
                         <form action="" class="suscribe-container-form">
                             <input type="email" class="suscribe-container-input input"
                                 placeholder="Ingresa tu correo electronico">
-                            <a type="Enviar" class="button button-primary suscribe-container-button">Suscribirme</a>
+                            <a href="#" type="Enviar"
+                                class="button button-primary suscribe-container-button">Suscribirme</a>
                         </form>
                     </div>
                 </article>
@@ -227,8 +237,8 @@
     <!-- scrip bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
-    
+        </script>
+
 
 </body>
 
