arregle error en header y footer
arregle el error en footer y header

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <!-- link css -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- link scss -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <!-- link Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,7 +76,7 @@
     <div class="encabezado-img"></div>
 
     <main class="main-index">
-        <section>
+        <section class="cards-01">
             <div class="container">
                 <div class="row gy-3">
                     <div class="col-md-4">
@@ -111,11 +111,11 @@
             </div>
         </section>
         <h1>Los mas buscados</h1>
-        <section>
-            <div class="container">
+        <section class="mas-buscados">
+            <div class="container buscado-cont">
                 <div class="row gy-3">
                     <div class="col-md-4">
-                        <div class="card .card-img">
+                        <div class="card card-buscados">
                             <img src="./img/Golosina-01.png" class="card-img-top card-img text-center"
                                 alt="Combo Golosinas" title="box golosinas">
                             <div class="card-body">
