--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
     <!-- link css -->
     <link rel="stylesheet" href="../css/style.css">
     <!-- link scss -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- link Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
