solucione scss del footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -133,7 +133,7 @@
                 <article class="footer-section">
                     <h3 class="footer-section-title">Enlaces</h3>
                     <ul class="footer-section-table">
-                        <li class="footer-section-links"><a href="../index.html">Inicio</a></li>
+                        <li class="footer-section-links"><a href="../index.html" class="footer-section-link">Inicio</a></li>
                         <li class="footer-section-links"><a href="./quienes-somos.html"
                                 class=" footer-section-link">Quienes somos</a></li>
                         <li class="footer-section-links"><a href="./productos.html"
