--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <article class="footer-section">
                     <h3 class="footer-section-title">Enlaces</h3>
                     <ul class="footer-section-table">
-                        <li class="footer-section-links"><a href="./index.html">Inicio</a></li>
+                        <li class="footer-section-links"><a href="./index.html" class="footer-section-link" >Inicio</a></li>
                         <li class="footer-section-links"><a href="./pages/quienes-somos.html" class=" footer-section-link">Quienes somos</a></li>
                         <li class="footer-section-links"><a href="./pages/productos.html" class=" footer-section-link">Productos</a></li>
                         <li class="footer-section-links"><a href="./pages/galeria.html" class=" footer-section-link">Galeria</a></li>
